@@ -1,31 +1,21 @@
 <html>
-<head>
-    <style type="text/css">
-#map{
-height: 75%;
-width: 100%;
-}
-body {
-    margin: 0 0 0 0;
-}
-</style>
-
+  <head>
     <script type="text/javascript">
-        var bbox = "";
-        var width  = 800;
-        var height = 800;
+		//var bbox = "";
+        //var width  = 800;
+        //var height = 800;
 
-        // Parse query string and set variables
-        var url = location.href;
+		// Parse query string and set variables
+		var url = location.href;
         var queryStringPos = url.indexOf("?");
-        if( queryStringPos != -1 )
+		if( queryStringPos != -1 )
         {
             url = url.substring(queryStringPos + 1);
-            var variables = url.split ("&");
-            for (i = 0; i < variables.length; i++)
+	    	var variables = url.split ("&");
+            for (i = 0; i < variables.length; i++) 
             {
-                if( !variables[i] )
-                    continue;
+            	if( !variables[i] )
+            		continue;
                 var keyValue = variables[i].split("=");
                 eval ('var '+keyValue[0].toLowerCase()+'="'+keyValue[1]+'"');
             }
@@ -34,100 +24,84 @@ body {
         {
             dump("YWMS ERROR: no queryString\n");
         }
-
+        
         // Limit size to current window's, to avoid memory problems
-        width = Math.min(width, screen.width);
-        height = Math.min(height, screen.height);
-
-        // Don't know how to hide the window, so resize for the user to see it loading the aerial photo
-        window.moveTo(0,0);
-        window.resizeTo(width,height);
+        //width = Math.min(width, screen.width);
+        //height = Math.min(height, screen.height);
+        
     </script>
-
-</head>
-<body>
-    <div id="map">
-    </div>
-
     <script type="text/javascript" src="http://api.maps.yahoo.com/ajaxymap?v=3.8&appid=z7qRk3_V34HAbY_SkC7u7GAgG5nDTblw.cuL1OS5LWGwkIIUeGjg4qsnJDPpmhoF"></script>
+  </head>
+  
+  <body style="margin: 0px">
+    <div id="map"></div>
     <script type="text/javascript">
-        if( !bbox || !width || !height)
-        {
+      if( !bbox || !width || !height)
+      {
           alert("YWMS ERROR: invalid parameters\n");
-        }
-        else
-        {
-            // Resize map container to parameter dimension
-            var mapDiv = document.getElementById("map");
-            mapDiv.style.width  = width;
-            mapDiv.style.height = height;
+      }
+      else
+      {
+        // Resize map container to parameter dimension
+        var mapDiv = document.getElementById("map");
 
-            // Get the bounding box
-            var coords = bbox.split(",");
-            var tllon  = coords[0], tllat = coords[1];
-            var brlon  = coords[2], brlat = coords[3];
+        // Get the bounding box
+        var coords = bbox.split(",");
+        var tllon  = Number(coords[0]), tllat = Number(coords[1]);
+        var brlon  = Number(coords[2]), brlat = Number(coords[3]);
 
-            var points = new Array();
-            points[0] = new YGeoPoint(tllat, tllon);
-            points[1] = new YGeoPoint(brlat, brlon);
+        var points = new Array();
+        points[0] = new YGeoPoint(tllat, tllon);
+        points[1] = new YGeoPoint(brlat, brlon);
 
-            // other map types work as well but only satellite allowed for use with OSM!
+        // other map types work as well but only satellite allowed for use with OSM!
+        var map = new YMap(document.getElementById("map"), YAHOO_MAP_SAT, new YSize(width, height));
+        map.removeZoomScale();
+        var zac = map.getBestZoomAndCenter(points);
+        var level = zac.zoomLevel;
+         
+        // funny Yahoo bug seems to return 0 if your section is too small
+        if( level == 0 ) level = 1;
+        if (level>1) level--;
 
-            // Create a map object
-            var map = new YMap(document.getElementById('map'));
+        map.drawZoomAndCenter(zac.YGeoPoint,level);
 
-            // Add map type control
-            //map.addTypeControl();
+        // Get the on-screen coordinates of the points
+        xy0 = map.convertLatLonXY(points[0]);
+        xy1 = map.convertLatLonXY(points[1]);
 
-            // Set map type to either of: YAHOO_MAP_SAT, YAHOO_MAP_HYB, YAHOO_MAP_REG
-            map.setMapType(YAHOO_MAP_SAT);
+        // This is hack to bug in getBestZoomAndCenter function
+        cx = map.convertXYLatLon(new YCoordPoint((xy0.x+xy1.x)/2, (xy0.y+xy1.y)/2));
+        map.drawZoomAndCenter(cx,level)
+      
+        dump(xy0.x + " " + xy0.y + " " + xy1.x + " " + xy1.y + "\n");
+        dump(tllat + " " + tllon + " " + brlat + " " + brlon + "\n");
+        dump((brlat + tllat)/2 + " " + (brlon + tllon)/2 + "\n");
+        
+        // Create a new size for the map. This makes the need of clipping the image unnecessary.
+        new_width  = Math.abs( xy0.x - xy1.x);
+        new_height = Math.abs( xy0.y - xy1.y);
+        
+        // Apply the new width-height
+        mapDiv.style.width  = new_width;
+        mapDiv.style.height = new_height;
+        map.resizeTo( new YSize(new_width, new_height));
+        window.moveTo(0,0);
+        window.resizeTo(new_width, new_height);
 
-            // Display the map centered on a geocoded location
-            map.removeZoomScale();
-            var zac = map.getBestZoomAndCenter(points);
-            var level = zac.zoomLevel;
 
-            // funny Yahoo bug seems to return 0 if your section is too small
-            if( level == 0 ) level = 1;
-            if (level>1) level--;
-            if (level == Infinity) level = undefined;
-
-/*            YEvent.Capture(map, EventsList.endMapDraw, function(event) {
-                alert('end draw');(event,map);});*/
-            map.drawZoomAndCenter(zac.YGeoPoint,level);
-            //map.drawZoomAndCenter("Brussels", 3);
-            // Get the on-screen coordinates of the points
-
-            xy0 = map.convertLatLonXY(points[0]);
-            xy1 = map.convertLatLonXY(points[1]);
-
-            // Create a new size for the map. This makes the need of clipping the image unnecesary.
-            new_width  = Math.abs( xy0.x - xy1.x);
-            new_height = Math.abs( xy0.y - xy1.y);
-
-            // Apply the new width-height
-            mapDiv.style.width  = new_width;
-            mapDiv.style.height = new_height;
-            map.resizeTo( new YSize(new_width, new_height));
-            //map.panToLatLon(points[1]);
-
-//            /// DEBUG: colour the interesting area
-//            var cPT2 = new YGeoPoint(tllat, tllon);
-//            var cPT3 = new YGeoPoint(tllat, brlon);
-//            var cPT4 = new YGeoPoint(brlat, brlon);
-//            var cPT5 = new YGeoPoint(brlat, tllon);
-//            // args: array of pts, color, width, alpha
-//            var poly1 = new YPolyline([cPT2,cPT3,cPT4,cPT5, cPT2],'blue',7,0.7);
-//            map.addOverlay(poly1);
-
-//            var bounds = map.getBoundsLatLon();
-
-            // Dumps the actual bounding box
-//                      alert("bbox=" + bounds.LonMin + "," + bounds.LatMin + "," + bounds.LonMax + "," + bounds.LatMax + "\n");
-//                      alert("new_width=" + new_width + "\n");
-//                      alert("new_height=" + new_height + "\n");
-        }
+          
+        /*
+        /// DEBUG: colour the interesting area
+        var cPT2 = new YGeoPoint(tllat, tllon); 
+        var cPT3 = new YGeoPoint(tllat, brlon); 
+        var cPT4 = new YGeoPoint(brlat, brlon); 
+        var cPT5 = new YGeoPoint(brlat, tllon); 
+        // args: array of pts, color, width, alpha 
+        var poly1 = new YPolyline([cPT2,cPT3,cPT4,cPT5, cPT2],'blue',7,0.7); 
+        map.addOverlay(poly1);
+        */
+      }
     </script>
-
-</body>
+  </body>
 </html>
